Fixed invitation route and updated config
